# kwork_notifier

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: dev-start.sh  start.sh
src/kwork_api_client/: __init__.py  kwork.py
src/kwork_api_client/types/: actor.py  project.py  user.py
src/kwork_notifier/: __main__.py  _logging.py  loader.py  settings.py  template_engine.py
src/kwork_notifier/tasks/kwork_projects/: parse.py
src/kwork_notifier/templates/: project.html
src/telegram_bot/: __main__.py  _logging.py  settings.py
src/telegram_bot/common/keyboards/: navigation.py
src/telegram_bot/middlewares/: acl.py
src/telegram_bot/routers/: __init__.py  callbacks.py
src/telegram_bot/routers/filters/: router.py  state.py
src/telegram_bot/routers/menu/: keyboard.py  router.py
src/telegram_bot/services/: apscheduler.py
src/telegram_bot/templates/: filters.html
