[tool.poetry]
name = "kwork-notifier"
version = "0.1.0"
description = ""
authors = ["coolworld2049 <coolworld2049@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "2.4.1"
pydantic-settings = "^2.1.0"
aiogram = "^3.3.0"
loguru = "^0.7.2"
apscheduler = "^3.10.4"
redis = "^5.0.1"
jinja2 = "^3.1.3"
selectolax = "^0.3.20"
cashews = {extras = ["redis"], version = "^7.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
